tests/invalid/parameter_pack_view_assignment_not_allowed.wio
fn MutateView<Args...>(args: Args...) {
    args[0usize] = args[0usize];
}
